-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.3, 6.8.0
-
None
-
-
21cd756a4 (dev), d271e64ec (6.8)
Customizing Overlay.modal attached property causes C++ compilation errors.
Sample code:
import QtQuick import QtQuick.Templates Popup { Overlay.modal: Rectangle { color: 'grey' } }
QML type compiler generates code
...
auto o = new MyPopup_Rectangle(creator, engine, this);
...
Which naturally produces compilation errors:
.qmltc\test\mypopup.cpp(375): error C2061: syntax error: identifier 'MyPopup_Rectangle' .qmltc\test\mypopup.cpp(376): error C3536: 'o': cannot be used before it is initialized ...
See standalone example test.zip
- relates to
-
QTBUG-130838 [qmltc] Compilation errors when building a QML component with aliased attached property
-
- Closed
-