qmltc: Retrieve types of attached and group properties

We need to recurse into those in order to find components assigned to
properties of attached objects.

Pick-to: 6.8
Fixes: QTBUG-130839
Change-Id: Ie08e7f992a262fa338038bae41c293229d5e3606
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>